prevent settings panel items from wrapping elements to improve page animation

--- a/src/scss/skin-modern/components/_settingspanelpage.scss
+++ b/src/scss/skin-modern/components/_settingspanelpage.scss
@@ -26,6 +26,7 @@
   .#{$prefix}-ui-settings-panel-item {
     border-bottom: 1px solid transparentize($color-secondary, .7);
     padding: .5em 0;
+    white-space: nowrap;
 
     &.#{$prefix}-last {
       border-bottom: 0;
